--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vueuse/components": "^10.4.1",
     "@vueuse/core": "^10.4.1",
+    "@vueuse/motion": "^2.0.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
