--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@vueuse/core": "^10.4.1",
     "@vueuse/motion": "^2.0.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue3-touch-events": "^4.1.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.1",
